--- a/index.html
+++ b/index.html
@@ -18,16 +18,58 @@
 
     <!-- Jumbo block -->
     <div id="mainBlock" class="ui inverted vertical masthead center aligned segment"> 
-        <div id="" class="ui text container">
-            <h2 id="searchBy">World View</h2>
-        </div>
+
     </div>
 
-    <!-- Empty container -->
+    <!-- Temp container -->
+    <div class="container">
+        <div id="earth_div"></div>
+    </div>
+
+    <!-- Article grid container -->
+    <div class="ui two column grid">
+        <div class="column ">
+          <div class="ui fluid card articleCard">
+            <div class="image">
+              <img src="">
+            </div>
+            <div class="content">
+              <a class="header">Article 1</a>
+              <div class="ui divider"></div>
+              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        </div>
+         <div class="column">
+          <div class="ui fluid card articleCard">
+            <div class="image">
+              <img src="">
+            </div>
+            <div class="content">
+              <a class="header">Article 2</a>
+              <div class="ui divider"></div>
+              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="ui fluid card articleCard">
+            <div class="image">
+              <img src="">
+            </div>
+            <div class="content">
+              <a class="header">Article 3</a>
+              <div class="ui divider"></div>
+              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        </div> 
+    </div>
 
 
 
 
+    <script src="http://www.webglearth.com/v2/api.js"></script>
     <script
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
