updated html & css

--- a/index.html
+++ b/index.html
@@ -17,17 +17,47 @@
     </div>
 
     <!-- Jumbo block -->
-    <div id="mainBlock" class="ui inverted vertical masthead center aligned segment"> 
+    <!-- <div id="mainBlock" class="ui inverted vertical masthead center aligned segment"> 
+        <div class="container">
+            <div id="earth_div"></div>
+        </div>
+    </div> -->
 
+
+    <div class="ui grid">
+        <div id="mainBlock" class="eight wide column">
+            <div class="container">
+                <div id="earth_div"></div>
+            </div>
+        </div>
+        <div class="eight wide column">
+            <div class="ui fluid card articleCard">
+                <div class="image">
+                  <img src="">
+                </div>
+                <div class="content">
+                  <a class="header">Article 3</a>
+                  <div class="ui divider"></div>
+                  <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="ui fluid card articleCard">
+                <div class="image">
+                  <img src="">
+                </div>
+                <div class="content">
+                  <a class="header">Article 3</a>
+                  <div class="ui divider"></div>
+                  <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </div>            
+        </div>
     </div>
 
-    <!-- Temp container -->
-    <div class="container">
-        <div id="earth_div"></div>
-    </div>
+
 
     <!-- Article grid container -->
-    <div class="ui two column grid">
+       <!-- <div class="ui two column grid">
         <div class="column ">
           <div class="ui fluid card articleCard">
             <div class="image">
@@ -64,7 +94,7 @@
             </div>
           </div>
         </div> 
-    </div>
+    </div> -->
 
 
 
@@ -76,5 +106,8 @@
         crossorigin="anonymous">
     </script>
     <script src="assets/Semantic-UI-CSS-master/semantic.min.js"></script>
+    <script src="assets/javascript/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js" integrity="sha256-H9jAz//QLkDOy/nzE9G4aYijQtkLt9FvGmdUTwBk6gs=" crossorigin="anonymous"></script>
+
 </body>
 </html>
