Added space backg & testing column breakpoints

--- a/index.html
+++ b/index.html
@@ -12,23 +12,40 @@
     <!-- Navbar -->
     <div class="ui large top fixed hidden menu">
         <div class="ui container">
-            <a id="headFont" href="index.html" class="active item">Planetary Death&nbsp<span class="skyFont">2.0</span></a>
+            <a id="headFont" href="index.html" class="active item">Pandemic&nbsp<span class="skyFont">UI</span></a>
         </div>
     </div>
 
     <!-- Jumbo block -->
-    <!-- <div id="mainBlock" class="ui inverted vertical masthead center aligned segment"> 
+    <div id="mainBlock" class="ui inverted vertical masthead center aligned segment"> 
         <div class="container">
             <div id="earth_div"></div>
         </div>
-    </div> -->
+    </div> 
 
 
     <div class="ui grid">
-        <div id="mainBlock" class="eight wide column">
-            <div class="container">
-                <div id="earth_div"></div>
+        <div class="eight wide column">
+          <div class="ui fluid card articleCard">
+            <div class="image">
+              <img src="">
             </div>
+            <div class="content">
+              <a class="header">Article</a>
+              <div class="ui divider"></div>
+              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+        <div class="ui fluid card articleCard">
+            <div class="image">
+              <img src="">
+            </div>
+            <div class="content">
+              <a class="header">Article</a>
+              <div class="ui divider"></div>
+              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>  
         </div>
         <div class="eight wide column">
             <div class="ui fluid card articleCard">
@@ -36,7 +53,7 @@
                   <img src="">
                 </div>
                 <div class="content">
-                  <a class="header">Article 3</a>
+                  <a class="header">Article</a>
                   <div class="ui divider"></div>
                   <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
@@ -46,7 +63,7 @@
                   <img src="">
                 </div>
                 <div class="content">
-                  <a class="header">Article 3</a>
+                  <a class="header">Article</a>
                   <div class="ui divider"></div>
                   <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
