--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div> 
 
 
-    <div class="ui grid">
+    <!-- <div class="ui grid">
         <div class="eight wide column">
           <div class="ui fluid card articleCard">
             <div class="image">
@@ -69,7 +69,7 @@
                 </div>
             </div>            
         </div>
-    </div>
+    </div> -->
 
 
 
