Styled a card vaguely

--- a/index.html
+++ b/index.html
@@ -23,58 +23,27 @@
         </div>
     </div> 
 
-
-    <!-- <div class="ui grid">
+    <div class="ui vertical stripe segment">
+      <div class="ui middle aligned stackable grid container">
         <div class="eight wide column">
           <div class="ui fluid card articleCard">
             <div class="image">
-              <img src="">
+              <img src="assets/css/astronaut.jpg">
             </div>
             <div class="content">
-              <a class="header">Article</a>
+              <h2>Lorem Ipsum Dolor</h2>
               <div class="ui divider"></div>
               <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
+          </div>
         </div>
-        <div class="ui fluid card articleCard">
-            <div class="image">
-              <img src="">
-            </div>
-            <div class="content">
-              <a class="header">Article</a>
-              <div class="ui divider"></div>
-              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-        </div>  
-        </div>
-        <div class="eight wide column">
-            <div class="ui fluid card articleCard">
-                <div class="image">
-                  <img src="">
-                </div>
-                <div class="content">
-                  <a class="header">Article</a>
-                  <div class="ui divider"></div>
-                  <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-            </div>
-            <div class="ui fluid card articleCard">
-                <div class="image">
-                  <img src="">
-                </div>
-                <div class="content">
-                  <a class="header">Article</a>
-                  <div class="ui divider"></div>
-                  <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-            </div>            
-        </div>
-    </div> -->
 
 
+      </div>
+  </div>
 
     <!-- Article grid container -->
-       <!-- <div class="ui two column grid">
+    <!-- <div class="ui stackable two column grid">
         <div class="column ">
           <div class="ui fluid card articleCard">
             <div class="image">
@@ -111,7 +80,7 @@
             </div>
           </div>
         </div> 
-    </div> -->
+    </div>  -->
 
 
 
