--- a/index.html
+++ b/index.html
@@ -31,13 +31,36 @@
               <img src="assets/css/astronaut.jpg">
             </div>
             <div class="content">
-              <h2>Lorem Ipsum Dolor</h2>
+              <h3>Lorem Ipsum Dolor</h3>
               <div class="ui divider"></div>
               <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
         </div>
-
+        <div class="eight wide column">
+          <div class="ui fluid card articleCard">
+            <div class="image">
+              <img src="assets/css/astronaut.jpg">
+            </div>
+            <div class="content">
+              <h3>Lorem Ipsum Dolor</h3>
+              <div class="ui divider"></div>
+              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        </div>
+        <div class="eight wide column">
+          <div class="ui fluid card articleCard">
+            <div class="image">
+              <img src="assets/css/astronaut.jpg">
+            </div>
+            <div class="content">
+              <h3>Lorem Ipsum Dolor</h3>
+              <div class="ui divider"></div>
+              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        </div>
 
       </div>
   </div>
