--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
         </div>
     </div> 
 
-    <div class="ui vertical stripe segment">
+    <div id="artBlock" class="ui vertical stripe segment">
       <div class="ui middle aligned stackable grid container">
-        <div class="eight wide column">
+        <div class="row">
+          <div class="column">
+            <h1 id="artHeader">Article&nbsp<span class="skyFont">Feed</span></h1>
+          </div>
+        </div>
+        <div class="four wide column">
           <div class="ui fluid card articleCard">
             <div class="image">
               <img src="assets/css/astronaut.jpg">
@@ -37,7 +42,7 @@
             </div>
           </div>
         </div>
-        <div class="eight wide column">
+        <div class="four wide column">
           <div class="ui fluid card articleCard">
             <div class="image">
               <img src="assets/css/astronaut.jpg">
@@ -49,7 +54,7 @@
             </div>
           </div>
         </div>
-        <div class="eight wide column">
+        <div class="four wide column">
           <div class="ui fluid card articleCard">
             <div class="image">
               <img src="assets/css/astronaut.jpg">
@@ -61,7 +66,18 @@
             </div>
           </div>
         </div>
-
+        <div class="four wide column">
+          <div class="ui fluid card articleCard">
+            <div class="image">
+              <img src="assets/css/astronaut.jpg">
+            </div>
+            <div class="content">
+              <h3>Lorem Ipsum Dolor</h3>
+              <div class="ui divider"></div>
+              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        </div>
       </div>
   </div>
 
