--- a/index.html
+++ b/index.html
@@ -30,51 +30,14 @@
             <h1 id="artHeader">Article&nbsp<span class="skyFont">Feed</span></h1>
           </div>
         </div>
-        <div class="four wide column">
+        <div class="eight wide column">
           <div class="ui fluid card articleCard">
-            <div class="image">
-              <img src="assets/css/astronaut.jpg">
-            </div>
             <div class="content">
               <h3>Lorem Ipsum Dolor</h3>
               <div class="ui divider"></div>
-              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        </div>
-        <div class="four wide column">
-          <div class="ui fluid card articleCard">
-            <div class="image">
-              <img src="assets/css/astronaut.jpg">
-            </div>
-            <div class="content">
-              <h3>Lorem Ipsum Dolor</h3>
+              <p class="artDesc">Article Synopsis: <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <div class="ui divider"></div>
-              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        </div>
-        <div class="four wide column">
-          <div class="ui fluid card articleCard">
-            <div class="image">
-              <img src="assets/css/astronaut.jpg">
-            </div>
-            <div class="content">
-              <h3>Lorem Ipsum Dolor</h3>
-              <div class="ui divider"></div>
-              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        </div>
-        <div class="four wide column">
-          <div class="ui fluid card articleCard">
-            <div class="image">
-              <img src="assets/css/astronaut.jpg">
-            </div>
-            <div class="content">
-              <h3>Lorem Ipsum Dolor</h3>
-              <div class="ui divider"></div>
-              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p class="artDesc">MonthDayYear</p>
             </div>
           </div>
         </div>
