added target id for world deaths

--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
     <div id="mainBlock" class="ui inverted vertical masthead center aligned segment"> 
         <div class="container">
             <div id="earth_div"></div>
+            <!-- Z Index test -->
+            <div id="floatBlock">
+              <h2 id="deathToll">( Enter World Deaths )</h2>
+            </div>
         </div>
     </div> 
+
+
+
 
     <div id="artBlock" class="ui vertical stripe segment">
       <div class="ui middle aligned stackable grid container">
@@ -43,46 +50,6 @@
         </div>
       </div>
   </div>
-
-    <!-- Article grid container -->
-    <!-- <div class="ui stackable two column grid">
-        <div class="column ">
-          <div class="ui fluid card articleCard">
-            <div class="image">
-              <img src="">
-            </div>
-            <div class="content">
-              <a class="header">Article 1</a>
-              <div class="ui divider"></div>
-              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        </div>
-         <div class="column">
-          <div class="ui fluid card articleCard">
-            <div class="image">
-              <img src="">
-            </div>
-            <div class="content">
-              <a class="header">Article 2</a>
-              <div class="ui divider"></div>
-              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        </div>
-        <div class="column">
-          <div class="ui fluid card articleCard">
-            <div class="image">
-              <img src="">
-            </div>
-            <div class="content">
-              <a class="header">Article 3</a>
-              <div class="ui divider"></div>
-              <p class="artDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        </div> 
-    </div>  -->
 
 
 
