ongoing html css work

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <div class="ui container">
             <a id="headFont" href="index.html" class="active item">Pandemic&nbsp<span class="skyFont">UI</span></a>
         </div>
+        <h3 id="deathToll" class="right item">
+          Death Toll
+        </h3>
     </div>
+
+
 
     <!-- Jumbo block -->
     <div id="mainBlock" class="ui inverted vertical masthead center aligned segment"> 
@@ -22,7 +27,6 @@
             <div id="earth_div"></div>
             <!-- Z Index test -->
             <div id="floatBlock">
-              <h2 id="deathToll">( Enter World Deaths )</h2>
             </div>
         </div>
     </div> 
@@ -43,8 +47,9 @@
               <h3>Lorem Ipsum Dolor</h3>
               <div class="ui divider"></div>
               <p class="artDesc">Article Synopsis: <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p class="artBy">By&nbsp<span class="artAuthor">Bobert Floyd</span></p>
               <div class="ui divider"></div>
-              <p class="artDesc">MonthDayYear</p>
+              <p class="artDate">Date</p>
             </div>
           </div>
         </div>
