--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <h3 id="deathToll" class="right item">
-      Death Toll
+      Worldwide Death Toll
     </h3>
 
 
