--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
             <a id="headFont" href="index.html" class="active item">Pandemic&nbsp<span class="skyFont">UI</span></a>
         </div>
     </div>
-    <h3 id="deathToll" class="right item">
-      Worldwide Death Toll
-    </h3>
+
 
 
 
@@ -25,12 +23,12 @@
     <div id="mainBlock" class="ui inverted vertical masthead center aligned segment"> 
         <div class="container">
             <div id="earth_div"></div>
-            <!-- Z Index test -->
-            <div id="floatBlock">
-              <h3 id="deathToll" class="right item">
-                Death Toll
-              </h3>
-            </div>
+        </div>
+        <!-- Z Index test -->
+        <div id="floatBlock">
+          <h3 id="deathToll" class="">
+            Death Toll
+          </h3>
         </div>
     </div> 
 
