--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
             <h1 id="artHeader">Article&nbsp<span class="skyFont">Feed</span></h1>
           </div>
         </div>
+        <div id="articleContainer">
+          <!-- Build article cards here -->
+        </div>
+
+
         <div class="eight wide column">
           <div class="ui fluid card articleCard">
             <div class="content">
@@ -56,6 +61,7 @@
             </div>
           </div>
         </div>
+
       </div>
   </div>
 
