Did a bunch of styling fixes:     - Cleaned up header     - Global stats to a footer     - Card formatting issues fixed

--- a/index.html
+++ b/index.html
@@ -16,15 +16,6 @@
         </div>
     </div>
 
-      <!-- Z Index test -->
-      <div id="floatBlock">
-        <h3 id="deathToll" class="">
-          Death Toll
-        </h3>
-      </div>
-
-
-
 
     <!-- Jumbo block -->
     <div id="mainBlock" class="ui inverted vertical masthead center aligned segment"> 
@@ -33,23 +24,78 @@
         </div>
     </div> 
 
-
-
-
+    <!-- Z Index test -->
+    <div id="floatBlock">
+    </div>
 
     <div id="artBlock" class="ui vertical stripe segment">
       <div class="ui middle aligned stackable grid container">
         <div class="row">
-          <div class="column">
-            <h1 id="artHeader">Article&nbsp<span class="skyFont">Feed</span></h1>
+          <div class="sixteen wide column">
+            <h1 id="artHeader">News&nbsp<span class="skyFont">Resources</span></h1>
+          </div>
+          <div id="articleContainer" class="ui middle aligned stackable grid container">
+            <!-- Build article cards here -->
+
+
+
+
+
+            <!-- LEAVE THE CARDS BELOW FOR TROUBLESHOOTING STYLE -->
+            <!-- <div id="div1" class="eight wide column">
+              <div id="div2" class="ui fluid card articleCard">
+                <div id="div3" class="content">
+                  <h3 id="header">Lorem Ipsum Dolor</h3>
+                  <div id="div4" class="ui divider"></div>
+                  <p id="description" class="artDesc">Article Synopsis: <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p  id="author"></p>
+                  <div id="div5" class="ui divider"></div>
+                  <p id="url" class="artDate">Date</p>
+                </div>
+              </div>
+            </div>
+            <div id="div1" class="eight wide column">
+              <div id="div2" class="ui fluid card articleCard">
+                <div id="div3" class="content">
+                  <h3 id="header">Lorem Ipsum Dolor</h3>
+                  <div id="div4" class="ui divider"></div>
+                  <p id="description" class="artDesc">Article Synopsis: <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p  id="author"></p>
+                  <div id="div5" class="ui divider"></div>
+                  <p id="url" class="artDate">Date</p>
+                </div>
+              </div>
+            </div>
+            <div id="div1" class="eight wide column">
+              <div id="div2" class="ui fluid card articleCard">
+                <div id="div3" class="content">
+                  <h3 id="header">Lorem Ipsum Dolor</h3>
+                  <div id="div4" class="ui divider"></div>
+                  <p id="description" class="artDesc">Article Synopsis: <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p  id="author"></p>
+                  <div id="div5" class="ui divider"></div>
+                  <p id="url" class="artDate">Date</p>
+                </div>
+              </div>
+            </div> -->
+
           </div>
         </div>
-        <div id="articleContainer">
-          <!-- Build article cards here -->
-        </div>
-
       </div>
-  </div>
+    </div>
+
+
+    <!-- Bootleg spacer -->
+    <div id="spacer"></div>
+
+    <!-- Footer -->
+    <div class="ui large bottom fixed hidden menu">
+      <div class="ui container">
+        <h3 id="footerStat">
+          <span id="coronaVD">COVID-19</span> has <span id="caseToll"></span> confirmed cases and claimed <span id="deathToll"></span> lives to date.
+        </h3>
+      </div>
+    </div>
 
 
 
