Added search field

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
         <div class="row">
           <div class="sixteen wide column">
             <h1 id="artHeader">News&nbsp<span class="skyFont">Resources</span></h1>
+            <div id="textInput" class="ui search">
+              <div class="ui icon input">
+                <input id="cityEntered" class="prompt" type="text" placeholder="Type and hit enter!">
+                <!-- <i id="magGlass" class="search icon"></i> -->
+              </div>
+              <div class="results"></div>
+          </div>
           </div>
           <div id="articleContainer" class="ui middle aligned stackable grid container">
             <!-- Build article cards here -->
@@ -42,6 +49,7 @@
 
 
             <!-- LEAVE THE CARDS BELOW FOR TROUBLESHOOTING STYLE -->
+
             <!-- <div id="div1" class="eight wide column">
               <div id="div2" class="ui fluid card articleCard">
                 <div id="div3" class="content">
@@ -53,31 +61,7 @@
                   <p id="url" class="artDate">Date</p>
                 </div>
               </div>
-            </div>
-            <div id="div1" class="eight wide column">
-              <div id="div2" class="ui fluid card articleCard">
-                <div id="div3" class="content">
-                  <h3 id="header">Lorem Ipsum Dolor</h3>
-                  <div id="div4" class="ui divider"></div>
-                  <p id="description" class="artDesc">Article Synopsis: <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <p  id="author"></p>
-                  <div id="div5" class="ui divider"></div>
-                  <p id="url" class="artDate">Date</p>
-                </div>
-              </div>
-            </div>
-            <div id="div1" class="eight wide column">
-              <div id="div2" class="ui fluid card articleCard">
-                <div id="div3" class="content">
-                  <h3 id="header">Lorem Ipsum Dolor</h3>
-                  <div id="div4" class="ui divider"></div>
-                  <p id="description" class="artDesc">Article Synopsis: <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <p  id="author"></p>
-                  <div id="div5" class="ui divider"></div>
-                  <p id="url" class="artDate">Date</p>
-                </div>
-              </div>
-            </div> -->
+            </div>  -->
 
           </div>
         </div>
