--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         <div class="row">
           <div class="sixteen wide column">
             <h1 id="artHeader">News&nbsp<span class="skyFont">Resources</span></h1>
+            <button class="ui button">Great Britian</button>
+            <button class="ui button">United States</button>
+            <button class="ui button">China</button>
+            <button class="ui button">Iran</button>
+            <button class="ui button">Italy</button>
           </div>
           <div id="articleContainer" class="ui middle aligned stackable grid container">
             <!-- Build article cards here -->
