Added button values

--- a/index.html
+++ b/index.html
@@ -33,14 +33,10 @@
         <div class="row">
           <div class="sixteen wide column">
             <h1 id="artHeader">News&nbsp<span class="skyFont">Resources</span></h1>
-<<<<<<< HEAD
-=======
-            <button class="ui button">Great Britian</button>
-            <button class="ui button">United States</button>
-            <button class="ui button">China</button>
-            <button class="ui button">Iran</button>
-            <button class="ui button">Italy</button>
->>>>>>> 22ea03b7d77acd740e4cd3dcbdb0c00bef5829f4
+            <button class="ui button" value="gb">Great Britian</button>
+            <button class="ui button" value="us">United States</button>
+            <button class="ui button" value="cn">China</button>
+            <button class="ui button" value="it">Italy</button>
           </div>
           <div id="articleContainer" class="ui middle aligned stackable grid container">
             <!-- Build article cards here -->
