--- a/index.html
+++ b/index.html
@@ -31,14 +31,18 @@
     <div id="artBlock" class="ui vertical stripe segment">
       <div class="ui middle aligned stackable grid container">
         <div class="row">
-          <div class="sixteen wide column">
+          <div class="eight wide column">
+
             <h1 id="artHeader">News&nbsp<span class="skyFont">Resources</span></h1>
             <button class="ui button" value="gb">Great Britian</button>
-            <button class="ui button" value="us">United States</button>
-            <button class="ui button" value="cn">China</button>
+            <button class="ui button" value="us">United States </button>
+            <button class="ui button" value="in">"China"</button>
             <button class="ui button" value="it">Italy</button>
           </div>
-          <div id="articleContainer" class="ui middle aligned stackable grid container">
+          <div class="eight wide column">
+
+          
+          </div id="articleContainer" class="ui middle aligned stackable grid container">
             <!-- Build article cards here -->
 
 
