--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div id="buttonGrp" class="eight wide column">
             <button class="ui button" value="gb">Great Britain</button>
             <button class="ui button" value="us">United States</button>
-            <button class="ui button" value="cn">China</button>
+            <button class="ui button" value="in">India</button>
             <button class="ui button" value="it">Italy</button>
           </div>
           <div id="articleContainer" class="ui middle aligned stackable grid container">
