--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <div class="eight wide column">
             <h1 id="artHeader">News&nbsp<span class="skyFont">Resources</span></h1>
           </div>
+
           <div id="buttonGrp" class="eight wide column">
             <button class="ui button" value="gb">Great Britain</button>
             <button class="ui button" value="us">United States</button>
@@ -41,7 +42,7 @@
             <button class="ui button" value="it">Italy</button>
           </div>
           
-          </div id="articleContainer" class="ui middle aligned stackable grid container">
+          <div id="articleContainer" class="ui middle aligned stackable grid container">
             <!-- Build article cards here -->
 
 
