--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/Semantic-UI-CSS-master/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Spartan:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Pandemic UI</title>
 </head>
 <body>
     <!-- Navbar -->
@@ -36,8 +36,8 @@
           </div>
 
           <div id="buttonGrp" class="eight wide column">
-            <button class="ui button" value="gb">Great Britain</button>
-            <button class="ui button" value="us">United States</button>
+            <button class="ui button" value="gb">GBR</button>
+            <button class="ui button" value="us">USA</button>
             <button class="ui button" value="in">India</button>
             <button class="ui button" value="it">Italy</button>
           </div>
