--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1 id="artHeader">News&nbsp<span class="skyFont">Resources</span></h1>
             <button class="ui button" value="gb">Great Britian</button>
             <button class="ui button" value="us">United States </button>
-            <button class="ui button" value="in">"China"</button>
+            <button class="ui button" value="in">China</button>
             <button class="ui button" value="it">Italy</button>
           </div>
           <div class="eight wide column">
